fix: fixes in mdx files

--- a/example/storybook/src/components/InputGroup/index.stories.mdx
+++ b/example/storybook/src/components/InputGroup/index.stories.mdx
@@ -8,7 +8,9 @@ InputGroup is a component that allows you to add an icon or button to an input.
 
 ## Usage
 
+```jsx
 import { InputGroup } from '@universa11y/input';
+```
 
 ```jsx
 <InputGroup id="input-group" placeholder="Placeholder" />
