--- a/example/storybook/src/components/Toast/index.stories.mdx
+++ b/example/storybook/src/components/Toast/index.stories.mdx
@@ -8,7 +8,9 @@ Toast is a component that allows you to add an string value in a paragraph to an
 
 ## Usage
 
+```jsx
 import { Toast } from '@universa11y/textarea';
+```
 
 ```jsx
 <Toast id="toast">
