fix: config colocated

--- a/example/storybook/src/api/PlatformBasedStyles/index.stories.mdx
+++ b/example/storybook/src/api/PlatformBasedStyles/index.stories.mdx
@@ -10,7 +10,7 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 import { styled, StyledProvider } from '@dank-style/react';
 import { View } from 'react-native';
 import { Button, AppProvider, CodePreview } from '@gluestack/design-system';
-import { config } from '../../components/nb.config';
+import { config } from './dank.config';
 
 # Platform Based Styles
 
