--- a/example/storybook/src/api/ResponsiveStyles/index.stories.mdx
+++ b/example/storybook/src/api/ResponsiveStyles/index.stories.mdx
@@ -10,7 +10,7 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 import { styled, StyledProvider } from '@dank-style/react';
 import { Pressable, Text } from 'react-native';
 import { AppProvider, CodePreview } from '@gluestack/design-system';
-import { config } from './dank.config';
+import { config } from './config';
 import { useState } from 'react';
 
 # Responsive styles
