feat: storybook fixes

--- a/example/storybook/src/getting-started/Accessibility/index.stories.mdx
+++ b/example/storybook/src/getting-started/Accessibility/index.stories.mdx
@@ -1,11 +1,11 @@
 ---
-title: TypeScript | Dank
-description: A guide to enable TypeScript for aliases and tokens.
+title: Accessibility | Universa11y
+description: A guide to enable Accessibility for aliases and tokens.
 ---
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="Getting Started/TypeScript" />
+<Meta title="Getting Started/Accessibility" />
 
 # TypeScript
 
