--- a/example/storybook/src/getting-started/Styling/index.stories.mdx
+++ b/example/storybook/src/getting-started/Styling/index.stories.mdx
@@ -1,11 +1,11 @@
 ---
-title: StyledProvider | Dank
-description: Dank Style exports a StyledProvider component that can be used to configure the library.
+title: Styling | Universa11y
+description: Dank Style exports a Universa11y component that can be used to configure the library.
 ---
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="Getting Started/StyledProvider" />
+<Meta title="Getting Started/Styling" />
 
 # StyledProvider
 
