--- a/example/storybook/src/overview/Introduction/index.stories.mdx
+++ b/example/storybook/src/overview/Introduction/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Introduction | Dank
+title: Introduction | Universa11y
 description: Dank is a performant styling library for React and React Native that enables developers to write maintainable and scalable styles in a fast and efficient manner.
 ---
 
