fix: update documentation

--- a/example/storybook/src/api/Variants/index.stories.mdx
+++ b/example/storybook/src/api/Variants/index.stories.mdx
@@ -19,7 +19,7 @@ Dank allows you to easily create different variations of a component with differ
 
 Using variant props in a UI component library allows for more flexibility and reusability of components.
 
-## Adding a variant
+### Adding a variant
 
 <AppProvider>
   <CodePreview
@@ -152,7 +152,7 @@ Using variant props in a UI component library allows for more flexibility and re
   />
 </AppProvider>
 
-- Boolean variants
+### Boolean variants
 
 <AppProvider>
   <CodePreview
@@ -220,10 +220,11 @@ Using variant props in a UI component library allows for more flexibility and re
   />
 </AppProvider>
 
-- Compound variants
+### Compound variants
 
-  - The compoundVariants feature allows you to set styles for a variant based on a combination of other variants. This means that you can specify different styles for a variant depending on the values of other variants that are being used.
-  - compoundVariants is an array of objects that contain a `value` key and variants. The `value` key accepts the same style object as the sx style.
+The `compoundVariants` feature allows you to set styles for a variant based on a combination of other variants. This means that you can specify different styles for a variant depending on the values of other variants that are being used.
+
+> **Note:** `compoundVariants` is an array of objects that contain a `value` key and variants. The `value` key accepts the same style object as the sx style.
 
 <AppProvider>
   <CodePreview
