--- a/example/storybook/src/components/ButtonGroup/index.stories.mdx
+++ b/example/storybook/src/components/ButtonGroup/index.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="components/Button" />
+<Meta title="components/ButtonGroup" />
 
 # Button
 
