--- a/example/storybook/src/components/Button/index.stories.mdx
+++ b/example/storybook/src/components/Button/index.stories.mdx
@@ -3,7 +3,7 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 <Meta title="components/Button" />
 
 import { AccessibleButton } from './Button';
-import { AppProvider, CodePreview } from '@gluestack/design-system';
+import { AppProvider, CodePreview, Table } from '@gluestack/design-system';
 
 # Button
 
@@ -160,13 +160,6 @@ It inherits all the properties of React Native's [Text](https://reactnative.dev/
 Contains all group related layout style props and actions.
 It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
 
-| Prop       | Type              | Default | Description                                                   |
-| ---------- | ----------------- | ------- | ------------------------------------------------------------- |
-| direction  | 'column' or 'row' | 'row'   |                                                               |
-| isDisabled | bool              | false   | When true, this will disable all the buttons in a ButtonGroup |
-| isAttached | bool              | true    | When attached, both buttons will be attached to each other.   |
-| reversed   | bool              | false   | To reverse the order of components                            |
-
 ### GroupSpacer
 
 Contains all spacer related layout style props and actions.
@@ -198,7 +191,7 @@ It inherits all the properties of React Native's [ActivityIndicator](https://rea
   />
 </AppProvider>
 
-## Acceessibility
+## Accessibility
 
 ### Keyboard
 
