--- a/example/storybook/src/components/Divider/index.stories.mdx
+++ b/example/storybook/src/components/Divider/index.stories.mdx
@@ -2,20 +2,97 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="components/Divider" />
 
+import { AccessibleDivider } from './Divider';
+import { AppProvider, CodePreview } from '@gluestack/design-system';
+import { View } from 'react-native';
+
 # Divider
 
-A Divider component is used to create a visual separation between different sections or elements in a layout. In React Native, the Divider component can be generated using a third-party accessibility-focused library that uses "styled views" to define the layout, visual design, and behavior of the component.
+A Divider component is used to create a visual separation between different sections or elements in a layout.
 
-## Styled Views
+<AppProvider>
+  <CodePreview
+    showComponentRenderer={true}
+    showArgsController={false}
+    metaData={{
+      code: ` 
+      function App () {
+        return <View style={{width:100}}><Divider/></View>
+    }`,
+      scope: { Divider: AccessibleDivider, View },
+      argsType: {},
+    }}
+  />
+</AppProvider>
 
-Styled views are used to define the layout and visual design of the Divider, such as its size, shape, border, and background color. They allow you to easily create a consistent look and feel for your component, while also making it easy to customize the design to match your app's overall style.
+<br />
 
-## Importing and Using a Third-Party Universal Accessibility Divider Component Library
+## Features
 
-There are several third-party libraries available for creating Divider components in React Native, such as `react-native-universally-components` or `react-native-accessibility-components` that are focused on accessibility. These libraries provide pre-built Divider components that are ready to use, and can be easily imported and used in any React Native project while providing accessibility features like screen reader support and other accessibility-related features.
+- Can create variants of the Divider component by using the `variant` or `orientation` prop.
 
-When using a third-party library, the component can be used with props such as `color`, `orientation`, `thickness` to customize the behavior and appearance of the Divider. You can also style the divider using the `style` prop, this prop accepts an object containing the styles of the divider.
+## Installation
 
-<Canvas style={{ height: 200 }}>
-  <Story id="components-stories-divider--divider-story" />
-</Canvas>
+```jsx
+yarn add @universa11y/divider
+```
+
+## Usage
+
+```jsx
+import { createDivider } from '@universa11y/divider';
+const Divider = createDivider({
+  Root,
+});
+```
+
+These are the styled components that we need to pass in the creator API:
+
+### Root
+
+```jsx
+const Root = styled(
+  View,
+  {
+    ...
+  },
+);
+```
+
+## Anatomy
+
+```jsx
+export default () => <Divider />;
+```
+
+## API Reference
+
+### Root
+
+Contains all View related layout style props and actions.
+It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
+
+| Prop        | Type                | Default    | Description                      |
+| ----------- | ------------------- | ---------- | -------------------------------- |
+| orientation | horizontal/vertical | horizontal | It sets the direction of divider |
+
+## Example
+
+<AppProvider>
+  <CodePreview
+    showComponentRenderer={true}
+    showArgsController={false}
+    metaData={{
+      code: ` 
+      function App () {
+       return <View style={{width:100}}><Divider/></View>
+    }`,
+      scope: { Divider: AccessibleDivider, View },
+      argsType: {},
+    }}
+  />
+</AppProvider>
+
+## Accessibility
+
+It sets the aria-orientation attribute to the divider.
