--- a/example/storybook/src/components/Slider/index.stories.mdx
+++ b/example/storybook/src/components/Slider/index.stories.mdx
@@ -7,3 +7,248 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 <Canvas style={{ height: 200 }}>
   <Story id="components-stories-slider--slider-story" />
 </Canvas>
+
+import { Canvas, Meta, Story } from '@storybook/addon-docs';
+
+<Meta title="components/Slider" />
+
+import { AccessibleSlider } from './Slider';
+import { AppProvider, CodePreview } from '@gluestack/design-system';
+import { Text } from 'react-native';
+
+# Slider
+
+A slider component is a graphical user interface element that allows the user to select a value from a range by sliding a knob along a track.
+
+<AppProvider>
+  <CodePreview
+    showComponentRenderer={true}
+    showArgsController={false}
+    metaData={{
+      code: ` 
+       const [sliderValue, setSliderValue] = React.useState(40);
+  const handleChange = (value: any) => {
+    setSliderValue(value);
+  };
+      function App () {
+        return (
+       <Slider
+        w="50%"
+        value={sliderValue}
+        onChange={(value: any) => {
+          handleChange(value);
+        }}
+      >
+        <Slider.Track>
+          <Slider.FilledTrack />
+        </Slider.Track>
+        <Slider.Thumb />
+      </Slider>
+    )
+    }`,
+      scope: { Slider: AccessibleSlider, Text },
+      argsType: {},
+    }}
+  />
+</AppProvider>
+
+<br />
+
+## Features
+
+- Can be controlled or uncontrolled.
+- Full keyboard navigation.
+
+## Installation
+
+```jsx
+yarn add @universa11y/slider
+```
+
+## Usage
+
+```jsx
+import { createSlider } from '@universa11y/slider';
+const Slider = createSlider({
+  Root,
+  ThumbInteraction,
+  Thumb,
+  Track,
+  FilledTrack,
+});
+```
+
+These are the styled components that we need to pass in the creator API:
+
+### Root
+
+```jsx
+import { styled } from '@dank-style/react';
+const Root = styled(
+  View,
+  {
+    ...
+  },
+);
+```
+
+### ThumbInteraction
+
+```jsx
+import { styled } from '@dank-style/react';
+const ThumbInteraction = styled(
+  View,
+  {
+    ...
+  },
+);
+```
+
+### Thumb
+
+```jsx
+import { styled } from '@dank-style/react';
+const Thumb = styled(
+  Pressable,
+  {
+    ...
+  },
+);
+```
+
+### Track
+
+```jsx
+import { styled } from '@dank-style/react';
+const Track = styled(
+  Pressable,
+  {
+    ...
+  },
+);
+```
+
+### FilledTrack
+
+```jsx
+import { styled } from '@dank-style/react';
+const GroupSpacer = styled(
+  View,
+  {
+    ...
+  },
+);
+```
+
+## Anatomy
+
+```jsx
+export default () => (
+  <Slider>
+    <Slider.Track>
+      <Slider.FilledTrack />
+    </Slider.Track>
+    <Slider.Thumb />
+  </Slider>
+);
+```
+
+## API Reference
+
+### Slider
+
+It inherits all the properties of React Native's [view](https://reactnative.dev/docs/view#props) component.
+
+| Prop               | Type                       | Default    | Description |
+| ------------------ | -------------------------- | ---------- | ----------- |
+| value              | number                     | 0          | -           |
+| defaultValue       | number                     | 0          | -           |
+| onChange           | function                   |            | -           |
+| accessibilityLabel | string                     | Slider     | -           |
+| isReversed         | bool                       | false      | -           |
+| orientation        | 'horizontal' or 'vertical' | horizontal | -           |
+| isDisabled         | bool                       | false      | -           |
+| onChangeEnd        | function                   |            | -           |
+| minValue           | number                     | 0          | -           |
+| step               | number                     | 1          | -           |
+| isReadOnly         | bool                       | false      | -           |
+| thumbSize          | number                     | false      | -           |
+
+### Slider.Thumb
+
+Contains all thumb related layout style props and actions.
+It inherits all the properties of React Native's [Pressable](https://reactnative.dev/docs/pressable#props) component.
+
+| Prop        | Type                       | Default      |
+| ----------- | -------------------------- | ------------ |
+| orientation | 'horizontal' or 'vertical' | 'horizontal' |
+| isDisabled  | bool                       | false        |
+| isReadOnly  | bool                       | false        |
+| onFocus     | function                   |              |
+| onBlur      | function                   |              |
+
+### Slider.Track
+
+Contains all track related layout style props and actions.
+It inherits all the properties of React Native's [Pressable](https://reactnative.dev/docs/pressable#props) component.
+
+| Prop       | Type | Default |
+| ---------- | ---- | ------- |
+| isReadOnly | bool | false   |
+
+### Slider.FilledTrack
+
+Contains all filled track view related layout style props and actions.
+It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
+
+| Prop       | Type | Default |
+| ---------- | ---- | ------- |
+| isReadOnly | bool | false   |
+
+## Example
+
+<AppProvider>
+  <CodePreview
+    showComponentRenderer={true}
+    showArgsController={false}
+    metaData={{
+      code: ` 
+       const [sliderValue, setSliderValue] = React.useState(40);
+  const handleChange = (value: any) => {
+    setSliderValue(value);
+  };
+      function App () {
+        return (
+       <Slider
+        w="50%"
+        value={sliderValue}
+        onChange={(value: any) => {
+          handleChange(value);
+        }}
+      >
+        <Slider.Track>
+          <Slider.FilledTrack />
+        </Slider.Track>
+        <Slider.Thumb />
+      </Slider>
+    )
+    }`,
+      scope: { Slider: AccessibleSlider, Text },
+      argsType: {},
+    }}
+  />
+</AppProvider>
+
+## Accessibility
+
+Adheres to [Slider WAI-ARIA design pattern.](https://www.w3.org/WAI/ARIA/apg/patterns/slider/)
+
+## Dependencies
+
+- `@react-native-aria/focus`
+- `@react-native-aria/interactions`
+- `@react-native-aria/slide`
+- `@react-stately/slider`
+- `@universa11y/react-native-aria`
+- `@universa11y/utils`
+- `react-native-svg`
