--- a/example/storybook/src/components/Checkbox/index.stories.mdx
+++ b/example/storybook/src/components/Checkbox/index.stories.mdx
@@ -6,20 +6,174 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 A Checkbox component is used to provide a way for users to select one or more options from a set of predefined choices. In React Native, the Checkbox component can be generated using a third-party accessibility-focused library that combines "styled views" and "pressable" to define the layout, visual design, and behavior of the component.
 
-## Styled Views
+## Features
 
-Styled views are used to define the layout and visual design of the checkbox, such as its size, shape, border, and background color. They allow you to easily create a consistent look and feel for your component, while also making it easy to customize the design to match your app's overall style.
+- Keyboard support for actions.
+- Support for hover, focus and active states.
 
-## Pressable
+## Installation
 
-The pressable component is used to handle the user's interaction with the checkbox, such as a tap or click event, which will toggle the checkbox's selected state.
+```jsx
+yarn add @universa11y/button
+```
 
-## Importing and Using a Third-Party Universal Accessibility Checkbox Component Library
+## Usage
 
-This can be easily imported and used in any React Native project while providing accessibility features like screen reader support and other accessibility-related features.
+```jsx
+import { createCheckBox } from '@universa11y/checkBox';
+const CheckBox = createCheckBox({
+  Root,
+  Indicator,
+  Icon,
+  Label,
+  Group,
+});
+```
 
-When using a third-party library, the component can be used with props such as `label`, `checked`, `onValueChange` to customize the behavior and appearance of the Checkbox. You can also style the checkbox using the `style` prop, this prop accepts an object containing the styles of the checkbox.
+These are the styled components that we need to pass in the creator API:
 
-<Canvas style={{ height: 200 }}>
-  <Story id="components-stories-checkbox--checkbox-story" />
-</Canvas>
+### Root
+
+```jsx
+import { styled } from '@dank-style/react';
+const Root = styled(
+  View,
+  {
+    ...
+  },
+);
+```
+
+### Indicator
+
+```jsx
+import { styled } from '@dank-style/react';
+const Indicator = styled(
+  View,
+  {
+    ...
+  },
+);
+```
+
+### Icon
+
+```jsx
+import { styled } from '@dank-style/react';
+const Icon = styled(
+  View,
+  {
+    ...
+  },
+);
+```
+
+### Label
+
+```jsx
+import { styled } from '@dank-style/react';
+const Label = styled(
+  Text,
+  {
+    ...
+  },
+);
+```
+
+### Group
+
+```jsx
+import { styled } from '@dank-style/react';
+const Group = styled(
+  View,
+  {
+    ...
+  },
+);
+```
+
+## Anatomy
+
+```jsx
+export default () => (
+  <Checkbox.Group>
+    <Checkbox>
+      <Checkbox.Indicator>
+        <Checkbox.Icon />
+      </Checkbox.Indicator>
+      <Checkbox.Label />
+    </Checkbox>
+  </Checkbox.Group>
+);
+```
+
+### Checkbox
+
+Contains all Checkbox related layout style props and actions.
+It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
+
+| Prop             | Type     | Default | Description                                                                                                                                      |
+| ---------------- | -------- | ------- | ------------------------------------------------------------------------------------------------------------------------------------------------ |
+| value            | string   | -       | The value to be used in the checkbox input. This is the value that will be returned on form submission.                                          |
+| onChange         | function | -       | Function called when the state of the checkbox changes.                                                                                          |
+| defaultIsChecked | bool     | false   | If true, the checkbox will be initially checked.                                                                                                 |
+| isChecked        | bool     | false   | When true, its checkbox is checked. the checkbox will be checked. You'll need to pass onChange to update it's value (since it's now controlled). |
+| isDisabled       | bool     | false   | To manually set disable to the checkbox.                                                                                                         |
+| isInvalid        | bool     | false   | To manually set invalid to the checkbox.                                                                                                         |
+| isReadOnly       | bool     | false   | To manually set readonly to the checkbox.                                                                                                        |
+| isHovered        | bool     | false   | To manually set hover to the checkbox.                                                                                                           |
+| isFocusVisible   | bool     | false   | To manually set focus visible state to the checkbox. checkbox.                                                                                   |
+| isIndeterminate  | bool     | false   | To manually set indeterminate to the checkbox.                                                                                                   |
+
+### Checkbox.Indicator
+
+Contains all Indicator related layout style props and actions.
+It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
+
+### Checkbox.Indicator
+
+Contains all Indicator related layout style props and actions.
+It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
+
+## Checkbox.Icon
+
+Contains all Icon related layout style props and actions.
+It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
+
+## Checkbox.Label
+
+Contains all Label related layout style props and actions.
+It inherits all the properties of React Native's [Text](https://reactnative.dev/docs/text#props) component.
+
+## Checkbox.Group
+
+Contains all Group related layout style props and actions.
+It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
+
+| Prop     | Type     | Default | Description                                                            |
+| -------- | -------- | ------- | ---------------------------------------------------------------------- |
+| value    | string[] | -       | The value of the checkbox group.                                       |
+| onChange | function | -       | The callback fired when any children Checkbox is checked or unchecked. |
+
+## Example
+
+## Acceessibility
+
+### Keyboard
+
+- Tab: Moves focus to the next focusable element.
+- `Shift + Tab`: Moves focus to the previous focusable element.
+- Space: To check or uncheck focused checkbox.
+
+### Screen Reader
+
+- VoiceOver: When the checkbox is focused, the screen reader will announce it's a checkbox and it's current state (check or uncheck) and it's label.
+
+## Dependencies
+
+- `@react-native-aria/checkbox`
+- `@react-native-aria/focus`
+- `@universa11y/form-control`
+- `@universa11y/react-native-aria`
+- `@universa11y/utils`
+- `react-native-svg`
