--- a/example/storybook/src/components/Button/index.stories.mdx
+++ b/example/storybook/src/components/Button/index.stories.mdx
@@ -128,7 +128,7 @@ export default () => (
 
 ## API Reference
 
-### Root
+### Button
 
 Contains all button related layout style props and actions.
 It inherits all the properties of React Native's [Pressable](https://reactnative.dev/docs/pressable#props) component.
@@ -136,52 +136,100 @@ It inherits all the properties of React Native's [Pressable](https://reactnative
 <Table>
   <Table.THead>
     <Table.TR>
-      <Table.TH>Prop</Table.TH>
-      <Table.TH>Type</Table.TH>
-      <Table.TH>Default</Table.TH>
-      <Table.TH>Description</Table.TH>
+      <Table.TH bg="pink600">
+        <Text>Prop</Text>
+      </Table.TH>
+      <Table.TH>
+        <Text>Type</Text>
+      </Table.TH>
+      <Table.TH>
+        <Text>Default</Text>
+      </Table.TH>
+      <Table.TH>
+        <Text>Description</Text>
+      </Table.TH>
     </Table.TR>
   </Table.THead>
   <Table.TBody>
     <Table.TR>
-      <Table.TD>isLoading</Table.TD>
-      <Table.TD>bool</Table.TD>
-      <Table.TD>false</Table.TD>
-      <Table.TD>When true, its loading state activates.</Table.TD>
+      <Table.TD>
+        <Text>isLoading</Text>
+      </Table.TD>
+      <Table.TD>
+        <Text>bool</Text>
+      </Table.TD>
+      <Table.TD>
+        <Text>false</Text>
+      </Table.TD>
+      <Table.TD>
+        <Text>When true, its loading state activates.</Text>
+      </Table.TD>
     </Table.TR>
     <Table.TR>
-      <Table.TD>isHovered</Table.TD>
-      <Table.TD>bool</Table.TD>
-      <Table.TD>false</Table.TD>
-      <Table.TD>To manually set hover to the button.</Table.TD>
+      <Table.TD>
+        <Text>isHovered</Text>
+      </Table.TD>
+      <Table.TD>
+        <Text>bool</Text>
+      </Table.TD>
+      <Table.TD>
+        <Text>false</Text>
+      </Table.TD>
+      <Table.TD>
+        <Text>To manually set hover to the button.</Text>
+      </Table.TD>
     </Table.TR>
     <Table.TR>
-      <Table.TD>isPressed</Table.TD>
-      <Table.TD>bool</Table.TD>
-      <Table.TD>false</Table.TD>
-      <Table.TD>To manually set pressable state to the button.</Table.TD>
+      <Table.TD>
+        <Text>isPressed</Text>
+      </Table.TD>
+      <Table.TD>
+        <Text>bool</Text>
+      </Table.TD>
+      <Table.TD>
+        <Text>false</Text>
+      </Table.TD>
+      <Table.TD>
+        <Text>To manually set pressable state to the button.</Text>
+      </Table.TD>
     </Table.TR>
     <Table.TR>
-      <Table.TD>isFocused</Table.TD>
-      <Table.TD>bool</Table.TD>
-      <Table.TD>false</Table.TD>
-      <Table.TD>To manually set focused state to the button.</Table.TD>
+      <Table.TD>
+        <Text>isFocused</Text>
+      </Table.TD>
+      <Table.TD>
+        <Text>bool</Text>
+      </Table.TD>
+      <Table.TD>
+        <Text>false</Text>
+      </Table.TD>
+      <Table.TD>
+        <Text>To manually set focused state to the button.</Text>
+      </Table.TD>
     </Table.TR>
     <Table.TR>
-      <Table.TD>isDisabled</Table.TD>
-      <Table.TD>bool</Table.TD>
-      <Table.TD>false</Table.TD>
-      <Table.TD>To manually set disable to the button.</Table.TD>
+      <Table.TD>
+        <Text>isDisabled</Text>
+      </Table.TD>
+      <Table.TD>
+        <Text>bool</Text>
+      </Table.TD>
+      <Table.TD>
+        <Text>false</Text>
+      </Table.TD>
+      <Table.TD>
+        <Text>To manually set disable to the button.</Text>
+      </Table.TD>
     </Table.TR>
   </Table.TBody>
 </Table>
 
-### Text
+### Button.Text
 
 Contains all text related layout style props and actions.
 It inherits all the properties of React Native's [Text](https://reactnative.dev/docs/text#props) component.
 
-### Group
+### Button.Group
 
 Contains all group related layout style props and actions.
 It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
@@ -190,50 +238,94 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
   <Table>
     <Table.THead>
       <Table.TR>
-        <Table.TH>Prop</Table.TH>
-        <Table.TH>Type</Table.TH>
-        <Table.TH>Default</Table.TH>
-        <Table.TH>Description</Table.TH>
+        <Table.TH>
+          <Text>Prop</Text>
+        </Table.TH>
+        <Table.TH>
+          <Text>Type</Text>
+        </Table.TH>
+        <Table.TH>
+          <Text>Default</Text>
+        </Table.TH>
+        <Table.TH>
+          <Text>Description</Text>
+        </Table.TH>
       </Table.TR>
     </Table.THead>
     <Table.TBody>
       <Table.TR>
-        <Table.TD>direction</Table.TD>
-        <Table.TD>'column' or 'row'</Table.TD>
-        <Table.TD>'row'</Table.TD>
+        <Table.TD>
+          <Text>direction</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>'column' or 'row'</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>'row'</Text>
+        </Table.TD>
         <Table.TD></Table.TD>
       </Table.TR>
       <Table.TR>
-        <Table.TD>isDisabled</Table.TD>
-        <Table.TD>bool</Table.TD>
-        <Table.TD>false</Table.TD>
         <Table.TD>
-          When Table.TRue, Table.THis will disable all Table.THe buttons in a
-          ButtonGroup
+          <Text>isDisabled</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>bool</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>false</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>
+            When true, This will disable all Table.THe buttons in a ButtonGroup
+          </Text>
         </Table.TD>
       </Table.TR>
       <Table.TR>
-        <Table.TD>isAttached</Table.TD>
-        <Table.TD>bool</Table.TD>
-        <Table.TD>Table.TRue</Table.TD>
         <Table.TD>
-          When attached, boTable.TH buttons will be attached to each
-          oTable.THer.
+          <Text>isAttached</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>bool</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>true</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>
+            When attached, all buttons will be attached to each other.
+          </Text>
         </Table.TD>
       </Table.TR>
       <Table.TR>
-        <Table.TD>reversed</Table.TD>
-        <Table.TD>bool</Table.TD>
-        <Table.TD>false</Table.TD>
-        <Table.TD>To reverse Table.The order of components</Table.TD>
+        <Table.TD>
+          <Text>reversed</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>bool</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>false</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>To reverse the order of components</Text>
+        </Table.TD>
       </Table.TR>
     </Table.TBody>
     <Table.TFoot>
       <Table.TR>
-        <Table.TD>reversed</Table.TD>
-        <Table.TD>bool</Table.TD>
-        <Table.TD>false</Table.TD>
-        <Table.TD>To reverse Table.The order of components</Table.TD>
+        <Table.TD>
+          <Text>reversed</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>bool</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>false</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>To reverse the order of components</Text>
+        </Table.TD>
       </Table.TR>
     </Table.TFoot>
   </Table>
