fix: installation step

--- a/example/storybook/src/components/Checkbox/index.stories.mdx
+++ b/example/storybook/src/components/Checkbox/index.stories.mdx
@@ -14,7 +14,7 @@ A Checkbox component is used to provide a way for users to select one or more op
 ## Installation
 
 ```jsx
-yarn add @universa11y/button
+yarn add @universa11y/checkbox
 ```
 
 ## Usage
